# cabal-test-parser

./: LICENSE  README.md  cabal-test-parser.cabal  clone-stackage-snapshot.py  dl-github-cabal-project-files.py
app/: Main.hs
parse-project-files/: Main.hs
