cabal-version:      3.0
name:               cabal-test-parser
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julian Goetz
maintainer:         nope
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable parse-project-file
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      cabal-install,
                      Cabal,
                      directory,
    hs-source-dirs:   app
    default-language: Haskell2010

executable parse-project-files
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      cabal-install,
                      Cabal,
                      directory,
                      filepath,
    hs-source-dirs:   parse-project-files
    default-language: Haskell2010
